; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subq_16_a.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_subq_16_a.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AY = common dso_local global i64 0, align 8
@REG_IR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_subq_16_a() #0 {
  %1 = alloca i64*, align 8
  store i64* @AY, i64** %1, align 8
  %2 = load i64*, i64** %1, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i32, i32* @REG_IR, align 4
  %5 = ashr i32 %4, 9
  %6 = sub nsw i32 %5, 1
  %7 = and i32 %6, 7
  %8 = add nsw i32 %7, 1
  %9 = sext i32 %8 to i64
  %10 = sub nsw i64 %3, %9
  %11 = call i64 @MASK_OUT_ABOVE_32(i64 %10)
  %12 = load i64*, i64** %1, align 8
  store i64 %11, i64* %12, align 8
  ret void
}

declare dso_local i64 @MASK_OUT_ABOVE_32(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
